enable encryption in config

--- a/configs/provizio-jetson-nano.config
+++ b/configs/provizio-jetson-nano.config
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: GPL-2.0-only
 #
-# SWUpdate Settings
+# SWUpdate Settings with Encryption Support
 #
 
 #
@@ -105,7 +105,10 @@ CONFIG_SIGALG_CMS=y
 #
 # Encryption
 #
-# CONFIG_ENCRYPTED_IMAGES is not set
+CONFIG_ENCRYPTED=y
+CONFIG_ENCRYPTED_IMAGES=y
+CONFIG_ENCRYPTED_SW_DESCRIPTION=y
+# CONFIG_PKCS11 is not set
 # end of Encryption
 
 #
@@ -158,6 +161,5 @@ CONFIG_SHELLSCRIPTHANDLER=y
 # CONFIG_DOCKER is not set
 # end of Update containers
 
-# ---- Make absolutely sure the “vars” + U-Boot env stack is off ----
 # CONFIG_SWUPDATE_VARS is not set
 # CONFIG_HAVE_LIBUBOOTENV is not set
