requirements for handling raw in files for encryption

--- a/configs/provizio-jetson-nano.config
+++ b/configs/provizio-jetson-nano.config
@@ -145,7 +145,7 @@ CONFIG_LOCALE=y
 # CONFIG_DISKPART is not set
 # CONFIG_DISKFORMAT_HANDLER is not set
 # CONFIG_EMMC_HANDLER is not set
-# CONFIG_RAW is not set
+CONFIG_RAW=y
 # CONFIG_RDIFFHANDLER is not set
 # CONFIG_READBACKHANDLER is not set
 # CONFIG_REMOTE_HANDLER is not set
