--- a/crypto/Makefile
+++ b/crypto/Makefile
@@ -14,9 +14,7 @@ endif
 ifeq ($(CONFIG_SSL_IMPL_WOLFSSL),y)
 obj-$(CONFIG_HASH_VERIFY)	+= swupdate_HASH_wolfssl.o
 obj-$(CONFIG_SIGALG_CMS)	+= swupdate_pkcs7_verify_wolfssl.o
-ifeq ($(CONFIG_PKCS11),y)
 obj-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt_wolfssl.o
-endif
 endif
 
 ifeq ($(CONFIG_SSL_IMPL_MBEDTLS),y)
@@ -27,4 +25,8 @@ obj-$(CONFIG_SIGALG_RSAPSS)	+= swupdate_rsa_verify_mbedtls.o
 endif
 ifeq ($(CONFIG_SSL_IMPL_GPGME),y)
 obj-$(CONFIG_SIGALG_GPG)	+= swupdate_gpg_verify.o
+endif
+
+ifeq ($(CONFIG_PKCS11),y)
+obj-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt_pkcs11_p11kit.o
 endif
