mongoose_interface: Fix malformed HTTP 200 response in upload endpoint
When using the built-in SWUpdate Mongoose server to upload a .swu via the
/upload endpoint, using SWUpdate >= 2022.12, returns a malformed HTTP 200
response after a successful upload.
The response contains an invalid header line:

  %sContent-Length: 0000000043

This breaks HTTP parsing in some clients even though the upload completes
and SWUpdate replies succesfully "Ok, <file> - <n> bytes.".

This regression was introduced when Mongoose was updated to v7 (commit
ce8702ce7e6589eaeb555fc74357d6c9adae9949). The upload handler was calling
mg_http_reply() with a "%s" format for the header block, causing the invalid
"%sContent-Length" prefix to appear.

Changes:

* Extract upload http 200 reply serialization into mongoose_upload_ok_reply
* Add test_upload_ok_reply_format
* Fix mongoose_upload_ok_reply http 200 reply serialization

Signed-off-by: David Alonso de la Torre <davidalto97@gmail.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -26,6 +26,7 @@ tests-$(CONFIG_SIGNED_IMAGES) += test_verify
 endif
 tests-$(CONFIG_SURICATTA_HAWKBIT) += test_json
 tests-$(CONFIG_SURICATTA_HAWKBIT) += test_server_hawkbit
+tests-$(CONFIG_MONGOOSE) += test_mongoose_upload
 tests-y += test_util
 tests-$(CONFIG_CFI) += test_flash_handler
 
