test: test/data present with external build
Setting external build, tests failed because data directory does not
exist. Be sure that is generated before creating the data.

This issue is not present if O= is not set.

Reference:

	https://github.com/sbabic/swupdate/actions/runs/21022677937/job/60440348084

Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/test/Makefile
+++ b/test/Makefile
@@ -120,7 +120,7 @@ TOKEN_AES_IV := c1f390d21dd06118cbd333144a3318ca
 
 .INTERMEDIATE: $(DATADIR)/softshm
 $(DATADIR)/softshm: export SOFTHSM2_CONF=$(DATADIR)/token/softhsm.conf
-$(DATADIR)/softshm: $(DATADIR)/token/softhsm.conf
+$(DATADIR)/softshm: $(DATADIR)/token/softhsm.conf PREPARE_DATA
 	$(if $(Q),@echo "  INIT     $@")
 	$(Q)rm -rf $(DATADIR)/token/*/
 
