--- a/test/data/token/softhsm.conf
+++ b/test/data/token/softhsm.conf
@@ -1,2 +1,4 @@
+# SPDX-License-Identifier: MIT
+# SPDX-FileCopyrightText: 2026 Matej Zachar <zachar.matej@gmail.com>
 directories.tokendir = test/data/token
 objectstore.backend = file
