CRYPTO: Resolve default configuration regression on SIGALG_RAWRSA
In commit cc218ee52107a34712497eb33d57047647e29d27,
sources were moved from 'Kconfig' to 'crypto/Kconfig'.

However, the move has a silent sources change that is masked by the move:
Menu 'Signature verification algorithm' had 'SIGALG_RAWRSA' as default 'y',
but it became 'n' by default after this move commit.

If the project is built without explicitly setting 'SIGALG_RAWRSA',
SWUpdate shall run without a signature verification algorithm and fail

--- a/crypto/Kconfig
+++ b/crypto/Kconfig
@@ -49,7 +49,7 @@ menu "Signature verification algorithm"
 
 	config SIGALG_RAWRSA
 		bool "RSA PKCS#1.5"
-		default n
+		default y
 		depends on SSL_IMPL_OPENSSL || SSL_IMPL_WOLFSSL || SSL_IMPL_MBEDTLS
 
 	config SIGALG_RSAPSS
