Add config option to ignore certs in CMS payload for cert validation
The CMS SignedData structure defined in RFC 5652 allows embedding
additional X.509 certificates in the signature data. This is mainly used
to transport the signing certificates for validation, but also allows
including additional certificates that are used during certificate
chain validation.

While these certificates are treated as "untrusted", there are cases
where this can be harmful for how we use CMS in swupdate. Consider the
following real-world example:

    +---------+       +-----------+       +---------------+
    | Root-CA |------>|  CA-prod  |------>| swu-sign-cert |
    +---------+       +-----------+       +---------------+
       |
       |              +------------+     +----------------+
       +------------->|  CA-devel  |---->| some-sign-cert |
                      +------------+     +----------------+

Root-CA signed multiple intermediate CAs (CA-prod and CA-devel).
Each of these intermediate CAs has a different purpose and signed
one or more leaf signing certificates. In swupdate we use
`-k ca-chain.crt` to supply the root CA and CA-prod certificate chain
as trusted certificates. Every update file will contain the
swu-sign-cert and the respective signature. When swupdate verifies
this signature, it will verify that the certificate chain ends in a
trusted certificate.

CMS however also allows to include certificates used for chain
construction in the CMS structure that is signed. This means we can
also use some-sign-cert to sign a malicious update file and include
CA-devel in the update file. According to the CMS specification these
additional certificates will be treated as untrusted, but will be used
in certificate chain construction. If a valid chain ending in a trusted
certificate can be constructed, the signature check passes and swupdate
will install the malicious update.

Add the option CONFIG_CMS_IGNORE_ADDITIONAL_CERTS to strictly ignore
any CMS-transported certificat

--- a/crypto/Kconfig
+++ b/crypto/Kconfig
@@ -80,6 +80,10 @@ config CMS_IGNORE_CERTIFICATE_PURPOSE
 config CMS_SKIP_UNKNOWN_SIGNERS
 	bool "Ignore unverifiable signatures if known signer verifies"
 	depends on SIGALG_CMS
+
+config CMS_IGNORE_ADDITIONAL_CERTS
+	bool "Use only direct signer certificates from CMS signature"
+	depends on SIGALG_CMS
 endmenu
 
 menu "Encryption"
